--- a/Login.html
+++ b/Login.html
@@ -4,9 +4,12 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link type="text/css" rel="stylesheet" href="Login.css" />
   <title>Login</title>
 </head>
 <body>
-  
+  <div class="Container">
+    <img src="background_login.png" class="image"/>
+  </div>
 </body>
 </html>
